--- a/destinationer.html
+++ b/destinationer.html
@@ -32,6 +32,8 @@
           <button data-kategori="Kroatien">Kroatien</button>
           <button data-kategori="Frankrig">Frankrig</button>
           <button data-kategori="Danmark">Danmark</button>
+          <button data-kategori="Tyskland">Tyskland</button>
+
         </nav>
       </article>
       <section class="data-container"></section>
