--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@
       </section>
     </main>
     <footer>Footer</footer>
-    <script src="script.js"></script>
+    <script src="burgermenu.js"></script>
   </body>
 </html>
