--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           </figure>
           <h2>Paris</h2>
           <p>Tag på storbysferie i Frankrigs hovedstad.</p>
-          <div class="button">
-            <a href="">Læs mere her</a>
-          </div>
+          <button class="read_more">Læs mere her</button>
         </article>
         <article class="dest2">
           <figure>
@@ -42,9 +40,7 @@
           </figure>
           <h2>Dubrovnik</h2>
           <p>Udforsk Dubrovniks gamle ruiner.</p>
-          <div class="button">
-            <a href="">Læs mere her</a>
-          </div>
+          <button class="read_more">Læs mere her</button>
         </article>
         <article class="dest3">
           <figure>
@@ -53,15 +49,11 @@
           <h2>Porto Pollo</h2>
           <p>Nyd afslapning, sol og saltvand i Porto Pollo.</p>
           <p></p>
-          <div class="button">
-            <a href="">Læs mere her</a>
-          </div>
+          <button class="read_more">Læs mere her</button>
         </article>
       </section>
       <section id="fourth_section">
-        <div class="button">
-          <a href="">Læs mere her</a>
-        </div>
+        <button class="read_more">Se alle destinationer</button>
       </section>
     </main>
     <footer>Footer</footer>
