--- a/om_os.html
+++ b/om_os.html
@@ -20,5 +20,15 @@
       </nav>
     </header>
     <script src="burgermenu.js"></script>
+    
+    <section id="om_os">
+    <h4>Om away from home</h4>
+    <p>På vores side beskrives forskellige byer i Europa. 
+      Disse kan  filtreres efter lande fx Klik på Frankring og så vises der Paris, 
+      Cannes, Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis 
+      man så vælger skiferie, får man vist destinationer på tværs af flere lande.
+    </p>
+  </section>
   </body>
+  <footer>Footer</footer>
 </html>
