--- a/singleview.html
+++ b/singleview.html
@@ -31,7 +31,7 @@
           <img src="img/splash.svg" alt="splash" />
         </figure>
         <div>
-          <p class="land"></p>
+          <h3 class="land"></h3>
           <p class="beskrivelse"></p>
           <p class="højsæson"></p>
           <p class="klima"></p>
