--- a/om_os.html
+++ b/om_os.html
@@ -22,13 +22,18 @@
     <script src="burgermenu.js"></script>
     
     <section id="om_os">
+      <article id="om_os_tekst">
     <h4>Om away from home</h4>
     <p>På vores side beskrives forskellige byer i Europa. 
       Disse kan  filtreres efter lande fx Klik på Frankring og så vises der Paris, 
       Cannes, Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis 
       man så vælger skiferie, får man vist destinationer på tværs af flere lande.
     </p>
+    <button>Se vores destinationer</button>
+  </article>
   </section>
+
+
   </body>
   <footer>Footer</footer>
 </html>
