--- a/om_os.html
+++ b/om_os.html
@@ -24,16 +24,19 @@
     <section id="om_os">
       <article id="om_os_tekst">
     <h4>Om away from home</h4>
-    <p>På vores side beskrives forskellige byer i Europa. 
-      Disse kan  filtreres efter lande fx Klik på Frankring og så vises der Paris, 
+    <h4 id="om">Bag AWAY FROM HOME står tre rejseglade unge piger. 
+      På siden er det muligt at finde tips til både skiferier,
+       storbyferier og badeferier. Der deles ud af erfaringer i håb om at det kan 
+       inspirere andre til at tage ud på eventyr. <br> <br> På vores side beskrives
+        forskellige byer i Europa. Disse kan  filtreres efter lande fx Klik på Frankring og så vises der Paris, 
       Cannes, Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis 
       man så vælger skiferie, får man vist destinationer på tværs af flere lande.
-    </p>
+    </h4>
     <button>Se vores destinationer</button>
   </article>
   </section>
 
 
   </body>
-  <footer>Footer</footer>
+  <footer>Adresse: Guldbergsgade 29N, 2200 København</footer>
 </html>
