--- a/index.html
+++ b/index.html
@@ -23,40 +23,25 @@
       <section id="first_section"></section>
       <section id="second_section">
         <h2>Find din næste europæiske rejsedestination</h2>
-        <h3>Top destinationer</h3>
+        <h3>Sæsonens top destinationer</h3>
       </section>
-      <section id="third_section">
-        <article class="dest1">
-          <figure>
-            <img src="" alt="Paris - billede" />
-          </figure>
-          <h2>Paris</h2>
-          <p>Tag på storbysferie i Frankrigs hovedstad.</p>
-          <button class="read_more">Læs mere her</button>
+
+      <section class="data_container"></section>
+      <template>
+        <article id="liste">
+          <img src="img/splash.svg" alt="splash" />
+          <h2></h2>
+          <p class="land"></p>
         </article>
-        <article class="dest2">
-          <figure>
-            <img src="" alt="Dubrovnik- billede" />
-          </figure>
-          <h2>Dubrovnik</h2>
-          <p>Udforsk Dubrovniks gamle ruiner.</p>
-          <button class="read_more">Læs mere her</button>
-        </article>
-        <article class="dest3">
-          <figure>
-            <img src="" alt="Porto Pollo - billede" />
-          </figure>
-          <h2>Porto Pollo</h2>
-          <p>Nyd afslapning, sol og saltvand i Porto Pollo.</p>
-          <p></p>
-          <button class="read_more">Læs mere her</button>
-        </article>
-      </section>
+      </template>
       <section id="fourth_section">
-        <button class="read_more">Se alle destinationer</button>
+        <button>
+          <a href="destinationer.html">Se alle destinationer</a>
+        </button>
       </section>
     </main>
     <footer>Footer</footer>
     <script src="burgermenu.js"></script>
+    <script src="indexfilter.js"></script>
   </body>
 </html>
