--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
+      <figure class="logo">
+        <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
+      </figure>
     </header>
     <main class="index">
       <section id="first_section"></section>
