--- a/index.html
+++ b/index.html
@@ -43,7 +43,25 @@
         </button>
       </section>
     </main>
-    <footer>Footer</footer>
+    <hr />
+    <footer>
+      <section id="section_footer">
+        <figure class="socialemedier">
+          <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
+          <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
+        </figure>
+        <div class="section_wrapper">
+          <p>
+            <a href="mailto:awayfromhome@gmail.com"
+              >Email: awayfromhome@gmail.com</a
+            >
+          </p>
+          <p>
+            <a href="tel:ukendt">Tlf: +45 42423796</a>
+          </p>
+        </div>
+      </section>
+    </footer>
     <script src="burgermenu.js"></script>
     <script src="indexfilter.js"></script>
   </body>
