--- a/om_os.html
+++ b/om_os.html
@@ -18,25 +18,29 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
+      <figure class="logo">
+        <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
+      </figure>
     </header>
     <script src="burgermenu.js"></script>
-    
+
     <section id="om_os">
       <article id="om_os_tekst">
-    <h4>Om away from home</h4>
-    <h4 id="om">Bag AWAY FROM HOME står tre rejseglade unge piger. 
-      På siden er det muligt at finde tips til både skiferier,
-       storbyferier og badeferier. Der deles ud af erfaringer i håb om at det kan 
-       inspirere andre til at tage ud på eventyr. <br> <br> På vores side beskrives
-        forskellige byer i Europa. Disse kan  filtreres efter lande fx Klik på Frankring og så vises der Paris, 
-      Cannes, Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis 
-      man så vælger skiferie, får man vist destinationer på tværs af flere lande.
-    </h4>
-    <button>Se vores destinationer</button>
-  </article>
-  </section>
-
-
+        <h4>Om away from home</h4>
+        <h4 id="om">
+          Bag AWAY FROM HOME står tre rejseglade unge piger. På siden er det
+          muligt at finde tips til både skiferier, storbyferier og badeferier.
+          Der deles ud af erfaringer i håb om at det kan inspirere andre til at
+          tage ud på eventyr. <br />
+          <br />
+          På vores side beskrives forskellige byer i Europa. Disse kan filtreres
+          efter lande fx Klik på Frankring og så vises der Paris, Cannes,
+          Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis man så
+          vælger skiferie, får man vist destinationer på tværs af flere lande.
+        </h4>
+        <button>Se vores destinationer</button>
+      </article>
+    </section>
   </body>
   <footer>Adresse: Guldbergsgade 29N, 2200 København</footer>
 </html>
