--- a/singleview.html
+++ b/singleview.html
@@ -18,6 +18,9 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
+      <figure class="logo">
+        <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
+      </figure>
     </header>
 
     <main class="single_view">
@@ -40,7 +43,25 @@
       </article>
       <!-- </section> -->
     </main>
-    <footer>Footer</footer>
+    <hr />
+    <footer>
+      <section id="section_footer">
+        <figure class="socialemedier">
+          <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
+          <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
+        </figure>
+        <div class="section_wrapper">
+          <p>
+            <a href="mailto:awayfromhome@gmail.com"
+              >Email: awayfromhome@gmail.com</a
+            >
+          </p>
+          <p>
+            <a href="tel:ukendt">Tlf: +45 42423796</a>
+          </p>
+        </div>
+      </section>
+    </footer>
     <script src="burgermenu.js"></script>
     <script>
       // Opret forbindelse til restdb herunder link og nøgle
