--- a/om_os.html
+++ b/om_os.html
@@ -42,5 +42,25 @@
       </article>
     </section>
   </body>
-  <footer>Adresse: Guldbergsgade 29N, 2200 København</footer>
+  <hr />
+
+
+    <footer>
+      <section id="section_footer">
+        <figure class="socialemedier">
+          <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
+          <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
+        </figure>
+        <div class="section_wrapper">
+          <p>
+            <a href="mailto:awayfromhome@gmail.com"
+              >Email: awayfromhome@gmail.com</a
+            >
+          </p>
+          <p>
+            <a href="tel:ukendt">Tlf: +45 42423796</a>
+          </p>
+        </div>
+      </section>
+    </footer>
 </html>
