--- a/om_os.html
+++ b/om_os.html
@@ -38,7 +38,9 @@
           Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis man så
           vælger skiferie, får man vist destinationer på tværs af flere lande.
         </h4>
-        <button>Se vores destinationer</button>
+        <button>
+            <a href=destinationer.html>Se vores destinationer</a>
+        </button>
       </article>
     </section>
   </body>
