--- a/singleview.html
+++ b/singleview.html
@@ -82,7 +82,7 @@
       }
       function visDestination() {
         document.querySelector("h1").textContent = destination.by;
-        document.querySelector("img").src = "img/splash.svg";
+        document.querySelector("article img").src = "img/splash.svg";
         document.querySelector(".land").textContent = destination.land;
         document.querySelector(".beskrivelse").textContent =
           destination.beskrivelse;
