--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </figure>
     </header>
     <main class="index">
-      <section id="first_section"></section>
+      <section id="first_section">
+        <h1>Away from home</h1>
+      </section>
       <section id="second_section">
         <h2>Find din næste europæiske rejsedestination</h2>
         <h3>Sæsonens top destinationer</h3>
