--- a/om_os.html
+++ b/om_os.html
@@ -22,25 +22,44 @@
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
     </header>
-    <script src="burgermenu.js"></script>
-
-    <section id="om_os">
-      <article id="om_os_tekst">
+    <main class="om_os">
+      <article class="om_os_tekst">
         <h4>Om away from home</h4>
-        <h4 id="om">
+        <p>
           Bag AWAY FROM HOME står tre rejseglade unge piger. På siden er det
           muligt at finde tips til både skiferier, storbyferier og badeferier.
           Der deles ud af erfaringer i håb om at det kan inspirere andre til at
-          tage ud på eventyr. <br />
-          <br />
+          tage ud på eventyr.
+        </p>
+        <p>
           På vores side beskrives forskellige byer i Europa. Disse kan filtreres
           efter lande fx Klik på Frankring og så vises der Paris, Cannes,
           Avoriaz, Val D. Eller der kan filtreres i aktivitet, hvor hvis man så
           vælger skiferie, får man vist destinationer på tværs af flere lande.
-        </h4>
-        <button>Se vores destinationer</button>
+        </p>
+        <button>
+          <a href="destinationer.html">Se vores destinationer</a>
+        </button>
       </article>
-    </section>
+    </main>
+    <footer>
+      <section id="section_footer">
+        <figure class="socialemedier">
+          <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
+          <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
+        </figure>
+        <div class="section_wrapper">
+          <p>
+            <a href="mailto:awayfromhome@gmail.com"
+              >Email: awayfromhome@gmail.com</a
+            >
+          </p>
+          <p>
+            <a href="tel:ukendt">Tlf: +45 42423796</a>
+          </p>
+        </div>
+      </section>
+    </footer>
+    <script src="burgermenu.js"></script>
   </body>
-  <footer>Adresse: Guldbergsgade 29N, 2200 København</footer>
 </html>
