--- a/singleview.html
+++ b/singleview.html
@@ -31,13 +31,16 @@
       <article id="single_liste">
         <h1></h1>
         <figure>
-          <img src="img/splash.svg" alt="splash" />
+          <img src="" alt="" />
         </figure>
-        <div>
+        <div id="tekst">
           <h3 class="land"></h3>
           <p class="beskrivelse"></p>
+          <!-- <p><b>Højsæson:</b></p> -->
           <p class="højsæson"></p>
+          <!-- <p><b>Klima:</b></p> -->
           <p class="klima"></p>
+          <!-- <p><b>Tip:</b></p> -->
           <p class="tip"></p>
         </div>
       </article>
@@ -82,7 +85,8 @@
       }
       function visDestination() {
         document.querySelector("h1").textContent = destination.by;
-        document.querySelector("article img").src = "img/splash.svg";
+        document.querySelector("article img").src =
+          "img/" + destination.billede + ".svg";
         document.querySelector(".land").textContent = destination.land;
         document.querySelector(".beskrivelse").textContent =
           destination.beskrivelse;
@@ -95,6 +99,21 @@
       document.querySelector("button").addEventListener("click", () => {
         window.history.back();
       });
+
+      // function visDestination() {
+      //   document.querySelector("h1").textContent = destination.by;
+      //   document.querySelector("article img").src =
+      //     "img/" + destination.billede + ".svg";
+      //   document.querySelector(".land").textContent = destination.land;
+      //   document.querySelector(".beskrivelse").textContent =
+      //     destination.beskrivelse;
+      //   document.querySelector(".højsæson").textContent = destination.højsæson;
+      //   document.querySelector(".klima").textContent = destination.klima;
+      //   document.querySelector(".tip").textContent = destination.tip;
+      // }
+      // document.querySelector("button").addEventListener("click", () => {
+      //   window.history.back();
+      // });
     </script>
   </body>
 </html>
