--- a/om_os.html
+++ b/om_os.html
@@ -41,6 +41,13 @@
           <a href="destinationer.html">Se vores destinationer</a>
         </button>
       </article>
+
+        <section class="om_os_billede">
+          <img src="/img/Paris.svg" alt="">
+        </section>
+        <section class="">
+
+        </section>
     </main>
     <footer>
       <section id="section_footer">
