--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Away from home</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/tig0ggs.css" />
+    <style>
+      .index section {
+      }
+    </style>
   </head>
   <body>
     <header>
@@ -28,6 +32,15 @@
       </section>
       <section id="second_section">
         <h2>Find din næste europæiske rejsedestination</h2>
+        <p>
+          <i>
+            Bag AWAY FROM HOME står tre rejseglade unge piger. Her på siden er
+            det muligt at finde vores personlige rejsetips til både skiferier,
+            storbyferier og badeferier.
+          </i>
+        </p>
+      </section>
+      <section id="third_section">
         <h3>Sæsonens top destinationer</h3>
       </section>
 
