--- a/om_os.html
+++ b/om_os.html
@@ -23,21 +23,24 @@
       </figure>
     </header>
     <main class="om_os">
+      <section id="first_section">
       <article class="om_os_tekst">
         <h4>Om away from home</h4>
         <p>
-          Bag AWAY FROM HOME står tre rejseglade unge piger. På siden er det
-          muligt at finde tips til både skiferier, storbyferier og badeferier.
-          Der deles ud af erfaringer i håb om at det kan inspirere andre til at
-          tage ud på eventyr.
+          Bag AWAY FROM HOME står tre rejseglade unge piger. Vi er opvokset i
+           Københavnsområdet og har altid haft en stor fælles passion: rejser! 
         </p>
         <p>
-          
+          På siden er det muligt at surfe rundt imellem vores yndlingsdestinationer og
+           gode tips til både skiferier, storbyferier og badeferier. Vi deler ud af
+            vores erfaringer i håb om at det kan inspirere andre til at tage ud på
+             eventyr i Europa. Vi håber i vil nyde rejserne lige så meget som os!
         </p>
         <button>
           <a href="destinationer.html">Se vores destinationer</a>
         </button>
       </article>
+    </section>
 
         <section class="om_os_billede">
         <img src="/img/Paris.svg" alt="">
