footer på alle sider

--- a/destinationer.html
+++ b/destinationer.html
@@ -59,22 +59,22 @@
     </main>
     <hr />
     <footer>
-      <section id="section_footer">
-        <figure class="socialemedier">
-          <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
-          <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
-        </figure>
-        <div class="section_wrapper">
-          <p>
-            <a href="mailto:awayfromhome@gmail.com"
-              >Email: awayfromhome@gmail.com</a
-            >
-          </p>
-          <p>
-            <a href="tel:ukendt">Tlf: +45 42423796</a>
-          </p>
-        </div>
-      </section>
+      <figure class="socialemedier">
+        <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
+        <img src="img/instagram_ikon.svg" alt="Instagram ikon" />
+      </figure>
+      <div class="telefon">
+        <p>
+          <a href="tel:ukendt">Tlf: +45 11223344</a>
+        </p>
+      </div>
+      <div class="mail">
+        <p>
+          <a href="mailto:awayfromhome@gmail.com"
+            >Email: awayfromhome@gmail.com</a
+          >
+        </p>
+      </div>
     </footer>
     <script src="burgermenu.js"></script>
     <script src="filter.js"></script>
