--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
+      <h1>Away from home</h1>
       <figure class="logo">
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
     </header>
     <main class="index">
-      <section id="first_section">
-        <h1>Away from home</h1>
-      </section>
+      <section id="first_section"></section>
       <section id="second_section">
         <h2>Find din næste europæiske rejsedestination</h2>
         <p>
@@ -48,20 +47,21 @@
           storbyferier og badeferier.
         </p>
       </section>
-      <section class="data_container">
+      <section>
         <h3>Sæsonens top destinationer</h3>
-      </section>
-      <template>
-        <article id="liste">
-          <img src="img/splash.svg" alt="splash" />
-          <h2></h2>
-          <p class="land"></p>
-        </article>
-      </template>
-      <section id="fourth_section">
-        <button>
-          <a href="destinationer.html">Se alle destinationer</a>
-        </button>
+        <section class="data_container"></section>
+        <template>
+          <article id="liste">
+            <img src="img/splash.svg" alt="splash" />
+            <h2></h2>
+            <p class="land"></p>
+          </article>
+        </template>
+        <section id="fourth_section">
+          <button>
+            <a href="destinationer.html">Se alle destinationer</a>
+          </button>
+        </section>
       </section>
     </main>
     <hr />
