--- a/om_os.html
+++ b/om_os.html
@@ -18,6 +18,7 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
+      <h1>Away from home</h1>
       <figure class="logo">
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
@@ -82,7 +83,7 @@
         </div>
       </section>
     </main>
-    <hr>
+    <hr />
     <footer>
       <figure class="socialemedier">
         <img src="img/facebook_ikon.svg" alt="Facebook ikon" />
