--- a/om_os.html
+++ b/om_os.html
@@ -38,13 +38,13 @@
             inspirere andre til at tage ud på eventyr i Europa. Vi håber i vil
             nyde rejserne lige så meget som os!
           </p>
-          <button>
-            <a href="destinationer.html">Se vores destinationer</a>
-          </button>
         </article>
-        <section class="om_os_billede">
+        <figure class="om_os_billede">
           <img src="/img/Paris.svg" alt="" />
-        </section>
+        </figure>
+        <button>
+          <a href="destinationer.html">Se vores destinationer</a>
+        </button>
       </section>
 
       <section class="kontaktformular">
