--- a/om_os.html
+++ b/om_os.html
@@ -28,15 +28,23 @@
         <article class="om_os_tekst">
           <h2>Om away from home</h2>
           <p>
-            Bag AWAY FROM HOME står tre rejseglade unge piger. Vi er opvokset i
-            Københavnsområdet og har altid haft en stor fælles passion: rejser!
+            Bag AWAY FROM HOME står tre rejseglade unge piger. Vi er selv
+            opvokset i det skønneste København og fælles har vi altid haft en
+            stor passion: rejser!
           </p>
           <p>
-            På siden er det muligt at surfe rundt imellem vores
-            yndlingsdestinationer og gode tips til både skiferier, storbyferier
-            og badeferier. Vi deler ud af vores erfaringer i håb om at det kan
-            inspirere andre til at tage ud på eventyr i Europa. Vi håber i vil
-            nyde rejserne lige så meget som os!
+            Her på siden er det muligt at finde inspiration, nyttige fakta og
+            gode eller skøre tips om vores yndlingsdestinationer i det skønne
+            Europa. Om det er skiferier, storbyferier eller badeferier du er
+            til, har vi helt sikkert en anbefaling, som passer lige til din
+            smag. Vi opdaterer hyppigt med nye tips og erfaringer, så sørg for
+            at holde dig opdateret med vores destinationsliste og
+            topdestinationer!
+          </p>
+          <p>
+            Vi deler ud af vores erfaringer i håb om, at det kan inspirere jer
+            til at tage ud på eventyr og opleve de bedste dele af Europa. Vi
+            håber i vil nyde rejserne lige så meget som os! TRAVEL AWAY!
           </p>
         </article>
         <figure class="om_os_billede">
