--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
       </figure>
     </header>
     <main class="index">
-      <section id="first_section"></section>
+      <section id="first_section">
+        <a id="pil_ned" class="pulse" href="#second_section"
+          ><figure>ᐸ</figure></a
+        >
+      </section>
       <section id="second_section">
         <h2>Find din næste europæiske rejsedestination</h2>
         <p>
@@ -52,7 +56,7 @@
         <section class="data_container"></section>
         <template>
           <article id="liste">
-            <img src="img/splash.svg" alt="splash" />
+            <img src="" alt="" />
             <h2></h2>
             <p class="land"></p>
           </article>
