style style style

--- a/destinationer.html
+++ b/destinationer.html
@@ -18,19 +18,14 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
-      <h1>Away from home</h1>
+      <h1><a href="index.html"> Away from home</a></h1>
       <figure class="logo">
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
     </header>
     <main class="destinationer">
-      <!-- <section id="first_section">
-        <h2>Destinationer</h2>
-      </section> -->
-      <!-- Filter for dataindsamling -->
       <article class="knapper">
         <nav>
-          <!-- <h3>Land:</h3> -->
           <button data-kategori="alle" class="valgt">Alle</button>
           <button data-kategori="Spanien">Spanien</button>
           <button data-kategori="Italien">Italien</button>
@@ -42,14 +37,6 @@
           <button data-kategori="Storbyferie">Storbyferie</button>
         </nav>
       </article>
-      <!-- <article class="knapper">
-        <nav>
-          <h3>Ferietype:</h3>
-          <button data-kategori="Aktiv ferie">Aktiv ferie</button>
-          <button data-kategori="Badeferie">Badeferie</button>
-          <button data-kategori="Storbyferie">Storbyferie</button>
-        </nav>
-      </article> -->
       <h2></h2>
       <section class="data_container"></section>
       <template>
