--- a/om_os.html
+++ b/om_os.html
@@ -18,7 +18,7 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
-      <h1>Away from home</h1>
+      <h1><a href="index.html"> Away from home</a></h1>
       <figure class="logo">
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
