--- a/singleview.html
+++ b/singleview.html
@@ -18,7 +18,7 @@
           <li><a href="om_os.html">Om os</a></li>
         </ul>
       </nav>
-      <h1>Away from home</h1>
+      <h1><a href="index.html"> Away from home</a></h1>
       <figure class="logo">
         <a href="index.html"><img src="img/logo.svg" alt="Logo" /></a>
       </figure>
@@ -26,7 +26,7 @@
 
     <main class="single_view">
       <div id="tilbage_knap">
-        <button>Tilbage til oversigt</button>
+        <button>Tilbage</button>
       </div>
       <section>
         <article id="single_liste">
