--- a/destinationer.html
+++ b/destinationer.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Passionsopgave om rejser og byer i Europa"
+    />
+    <meta
+      name="keywords"
+      content="rejse, destinationer, byer, europa, KEA, multimediedesign, MMD"
+    />
+    <meta name="author" content="Line Berner, Emilie Schultz, Rosa Sahlholt" />
     <title>Away from home</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://use.typekit.net/tig0ggs.css" />
