--- a/om_os.html
+++ b/om_os.html
@@ -53,7 +53,7 @@
           </p>
         </article>
         <figure class="om_os_billede">
-          <img src="/img/klode.svg" alt="klode" />
+          <img src="./img/klode.svg" alt="klode" />
         </figure>
         <button>
           <a href="destinationer.html">Se vores destinationer</a>
